--- a/scss/modules/_front.scss
+++ b/scss/modules/_front.scss
@@ -33,5 +33,6 @@
   .next-section {
     padding: 1rem 0;
     text-align: center;
+    margin: 0 auto;
   }
 }
